[Win][MSVC] REGRESSION(r282860): ClipboardItemBindingsDataSource.cpp(147): error C2955: 'WTF::Ref': use of class template requires template argument list https://bugs.webkit.org/show_bug.cgi?id=230599

Unreviewed build fix.


* Modules/async-clipboard/ClipboardItemBindingsDataSource.cpp:
(WebCore::ClipboardItemBindingsDataSource::collectDataForWriting):
Conditioned out the ASSERT_UNUSED for MSVC.


Canonical link: https://commits.webkit.org/241998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282867 268f45cc-cd09-0410-ab3c-d52691b4dbfc